typecheck/tests/micro/bad/test5.c
void a(void)
{
	if (1)
	{
		return;
	}
}

void main(void){
	int b[10];
	b[1] = 3;
	while(b){
		return;
	}
	while(1){
		if(b[1]){
			return 1;
		}
	}
	output(3);
	b[2] = input();
	a(b[3]);
	b[2] = input(b[3]);	
	func();

}

int g(void){
	if(1){
		return 1;
	}
	return 1;
}

int h(void){
	if(1){
		return 1;
	}
}

